// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds correct entries for fallback-keys caching 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

default:
  cache:
    - fallback_keys:
        - pathA
        - pathB
"
`;

exports[`adds correct entries for file-based caching 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

default:
  cache:
    - key:
        files:
          - Gemfile.lock
          - package.json
        prefix: \${CI_COMMIT_REF_SLUG}
"
`;

exports[`adds correct entries for multiple caches 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

default:
  cache:
    - key:
        files:
          - Gemfile.lock
      paths:
        - vendor/ruby
    - key:
        files:
          - yarn.lock
      paths:
        - .yarn-cache/
"
`;

exports[`adds correct entries for path-based caching 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

default:
  cache:
    - key: \${CI_COMMIT_REF_SLUG}
      paths:
        - node_modules
"
`;
